--- a/style.css
+++ b/style.css
@@ -1,449 +1,326 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
-    
 }
-
-body {
-    width: 100vw;
+body{
+    width: 100vm; 
     height: 100vh;
     background: rgb(252, 252, 252);
     overflow-x: hidden;
-
 }
-
-header {
-    
-    background: url('https://b.zmtcdn.com/web_assets/81f3ff974d82520780078ba1cfbd453a1583259680.png');
+header{
+    background-image: url(https://b.zmtcdn.com/web_assets/81f3ff974d82520780078ba1cfbd453a1583259680.png);
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 109%;
+    background-size: cover;
     width: 100%;
     min-height: 450px;
-    
-}
+}  
 
-
-nav {
+nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    height:70px;
     width: 80%;
-    height: 70px;
     margin: 0 auto;
+} 
 
-}
-.img{
-    width: 30px;
-    position: relative;
-    top: 10px;
-
-
-}
-
-nav .app_link a {
+nav .app_link a{
     text-decoration: none;
     color: #fff;
     font-weight: 500;
     font-size: 1rem;
-
 }
-
-nav .nav_items ul {
+nav .nav_items ul{
     display: flex;
     align-items: center;
     list-style: none;
-
 }
-
-nav .nav_items ul li a {
+nav .nav_items ul li a{
     text-decoration: none;
+    font-family:Okra, Helvetica, sans-serif;
     color: #fff;
     margin: 0 20px;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: lighter;
+    letter-spacing:1px;
 }
-
-.content_wrapper {
+.content_wraper{
     color: #fff;
-    width: 100%;
+    width:100%;
     text-align: center;
-    display: flex;
+    display:flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     margin-top: 50px;
-
-
 }
-
-.content_wrapper img {
-    width: 300px;
+.content_wraper img{
+    width:300px;
     height: 60px;
 
-
-
-}
-
-.content_wrapper h1 {
+}.content_wraper h1{
     font-size: 2.2rem;
     font-weight: 100;
-    margin: 30px 0;
+    margin:30px 0;
     letter-spacing: 2px;
-}
-
-.content_wrapper h1 span {
+}.content_wraper h1 span{
     font-weight: 600;
 }
-
-.search_container {
+.search_container{
     display: flex;
     align-items: center;
     background: #fff;
-    height: 3.4rem;
+    height: 3.2rem;
     width: 55%;
     border-radius: 8px;
 }
-
-.search_container .left_search,
-.search_container .right_search {
+.search_container .left_search, .search_container .right_search
+{
     display: inline-flex;
     padding: 0 1rem;
 }
-
-.search_container .left_search {
-    width: 30%;
-    border-right: 2px solid rgb(189, 188, 188);
-
+.search_container .left_search{
+    border-right: 2px solid rgb(189,188,189);
+    width:30% ;
 }
-
-.search_container .right_search {
+.search_container .right_search{
     width: 70%;
 }
-
-.search_container input {
+.search_container input{
     border: 0;
-    outline: none;
+    outline:  none;
     font-size: 1rem;
     background: transparent;
     color: grey;
     width: 100%;
     margin-left: 6px;
-
+}.search_container .left_search i{
+    color: rgba(255, 0, 0, 0.651);
 }
-
-.search_container .left_search i {
-    color: rgb(240, 125, 125);
+.search_container .right_search i{
+    color: rgb(189,188,188);
     font-size: 20px;
-
 }
-
-.search_container .right_search i {
-    color: rgb(189, 188, 188);
-    font-size: 20px;
-
-}
-
-/* ...........order section css......... */
-.order-section {
-    width: 85%;
+/* .............order section css................... */
+.order-section{
+    width: 65%;
     margin: 0 auto;
     text-align: center;
-
-
-
 }
-
-.order-section .order {
-    display: flex;
+.order-section .order{
+    display:flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     width: 100%;
     margin-top: 4%;
     margin-bottom: 40px;
-
-}
-
-.order .card {
+}.order .card{
     width: 30%;
-    margin: 0px;
+    margin: 12px;
     border-radius: 8px;
-    border: 1px solid rgb(209, 207, 207);
-    transition: transform 0.25s;
+    border: 1px solid rgb(240, 235, 235);
+    transition: transform 0.5s;
     position: relative;
-
-
-
 }
-
-.order .card a img {
+.order .card a img{
     width: 100%;
     height: 200px;
     border-radius: 8px;
     top: 0;
     left: 0;
-
-
 }
-
-.order .card:hover {
+.order .card:hover{
     transform: scale(1.1);
 }
-
-.order .card .content {
+.order .card .content{
     text-align: left;
     width: 100%;
     padding: 0 12px;
     position: absolute;
     bottom: 0;
-    background: #fff;
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
-
+    background:#fff;
 }
-
-.order .card .content .heading {
+.order .card .content .heading{
     font-size: 1rem;
-    margin: 10px 0;
-
+    margin: 10px 0; 
+    border-radius: 8px;
 }
-
-.order .card .content .text {
+.order .card .content .text{
     font-size: 0.9rem;
     margin-bottom: 10px;
 }
-
-.menu-icon {
-    color: #fff;
+.menu-icon{
+    color:#fff;
     font-size: 30px;
     display: none;
-
+    
 }
+/* ...................collections section css............... */
+.collections{
+    width:80%;
+    margin: 80px auto;
 
-/* ................collection Section CSS ..................  */
-.collections {
-    width: 85%;
-    margin: 90px auto;
-    text-align: center;
-}
-
-.collections h1 {
+}.collections h1{
     text-align: left;
-    font-size: 2.1rem;
+    text-align: 2.1rem;
     font-weight: lighter;
     margin-bottom: 20px;
-
 }
-
-.collections p {
+.collections p{
     text-align: left;
-    font-size: 1rem;
+    text-align: 1rem;
     font-weight: lighter;
     margin-bottom: 20px;
-
 }
-
-.collection-card {
+.collection-card{
     display: flex;
-    align-content: center;
     justify-content: space-between;
     flex-wrap: wrap;
-
-
 }
-
-.collection-card .card {
-    width: 265px;
+.collection-card .card{
+    width:260px;
     height: 320px;
     overflow: hidden;
     border-radius: 8px;
     position: relative;
     margin: 12px 0;
-}
-
-.collection-card .card img {
-    width: 100%;
+} 
+.collection-card .card img{
+    width:100%;
     height: 100%;
-    background: linear-gradient(from bottom, #000000, #ccc);
-
+    background: linear-gradient(from bottom, #c7bfbf, #ccc);
 }
-
-.collection-card .card .content {
+.collection-card .card .content{
     position: absolute;
     bottom: 0;
     width: 100%;
-
 }
-
-.collection-card .card .content p {
-    color: #d4d1d1;
+.collection-card .card .content p{
+    color: #ffffff;
     font-weight: 500;
     font-size: 1.1rem;
     margin: 5px 9px;
+
 }
-
-
-/* ................popular location css.................. */
-.collections h1 span {
-    color: #a4a0a0;
+/* .....................popular-location css.................... */
+.collections h1 span{
+    color:#6b6a6a;
     font-weight: lighter;
-
 }
-
-.popular-location {
+.popular-location{
     width: 100%;
     margin: 40px auto;
     display: flex;
     flex-wrap: wrap;
 }
-
-.popular-location .box {
+.popular-location .box{
     width: 30%;
-    background: #fff;
-    border: 1px solid #ccc;
+    background:#fff;
+    border: 1px soild #ccc;
     margin: 10px 15px;
     padding: 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     border-radius: 7px;
-
-
 }
-
-.popular-location .box:hover {
-    box-shadow: 0px 2px 5px rgba(70, 70, 70, 0.103);
-
+.popular-location .box:hover{
+box-shadow: 0px 2px 5px rgba(0,0,0,0.3);
 }
-
-.popular-location .box a {
+.popular-location .box a{
     text-decoration: none;
-    color: #a4a0a0;
+    color: #6b6a6a;
     font-weight: 0;
-
 }
-
-.popular-location .box p {
-    margin: 0;
-
+.popular-location .box p{
+    margin:0;
 }
-
-.popular-location .box .city {
+.popular-location .box .city{
     font-size: 20px;
     letter-spacing: 1px;
-
 }
-
-.popular-location .box .places {
+.popular-location .box .places{
     font-size: 16px;
     padding: 8px 0;
-
-
 }
-
-.popular-location .box i {
-    color: #5b5e5e;
+.popular-location .box .places i{
+    color: #8b8a8a;
 }
-
-/* .......................App section css............. */
-.app-section {
+/* .....................app-section css......................... */
+.app-section{
     width: 100%;
-    background: #FFFBF7;
-    padding: 60px 0;
-
+    background:#FFFBF7;
+    padding: 10px 0;  
 }
-
-.app {
+.app{
     display: flex;
     width: 70%;
     margin: 0 auto;
     justify-content: space-around;
 }
-
-.app .app-image {
+.app .app-image{
     width: 30%;
     padding-top: 50px;
 }
-
-.app .app-image img {
-    width: 100%;
+.app .app-image img{
+    width:100%;
 }
-
-.app .get-app {
+.app .get-app{
     width: 60%;
-    padding: 0 20px;
-}
+    padding: 20 0px;
 
-.app .get-app h2 {
-    font-size: 2rem;
+}
+.app .get-app h2{
+    font-size: 2.5rem;
     font-weight: lighter;
     margin-bottom: 25px;
 }
-
-.app .get-app p {
+.app .get-app p{
     font-size: 1rem;
     font-weight: lighter;
     margin-bottom: 30px;
 }
-
-.app .get-app .email-phone input {
-    margin-bottom: 30px;
-
+.app .get-app .email-phone input{
+    margin-bottom :30px;
+}
+.app .get-app .email-phone input[type="radio"]{
+    accent-color: rgb(240,58,88);
 }
 
-.app .get-app .email-phone input[type=radio] {
-    accent-color: rgb(240, 58, 88);
-
-}
-
-.submit input {
+.submit input{
     width: 60%;
     padding: 15px 8px;
     border: 0;
     outline: none;
-    border: 1px solid #acabab;
+    border: 1px solid #acabab; 
     border-radius: 7px;
     font-size: 1rem;
 }
-
-.submit button {
-    padding: 12px 8px;
-    background: rgb(224, 41, 72);
+.submit button{
+    padding: 15px 8px;
+    background: rgb(224,41,72);
     border: 0;
     outline: none;
     border-radius: 7px;
     font-size: 1.1rem;
     color: #fff;
     margin-left: 12px;
-
 }
-
-.download-text {
-    display: flex;
-    flex-direction: column;
-
-    justify-content: center;
-    margin-top: 20px;
-}
-
-
-.app-store {
+.app-store{
     display: flex;
     align-items: center;
     gap: 20px;
-    margin-top: 20px;
+    margin-top: 50px;
 }
-
-.app-store img {
+.app-store img{
     width: 150px;
-
 }
-
-/* ...............................Explore......................... */
-
-.option {
+/* ....................explore...................... */
+.option{
     background: #fff;
     width: 100%;
     border: 0;
@@ -453,23 +330,20 @@ nav .nav_items ul li a {
     padding: 22px 10px;
     margin-bottom: 20px;
     border-radius: 8px;
-    color: #979797;
+    color: #b1b0b0;
 }
-
-.option button {
+.option button{
     background: 0;
     border: 0;
     font-size: 1.1rem;
 }
-/* ...............................FOOTER......................... */
-
-
+/* .....................fOOTER SECTION.......... */
 .footer{
     width: 100%;
-    background: #F8f8f8;
+    background: #F8F8F8;
 }
 .footer .container{
-    width: 90%;
+    width:90%;
     margin: 0 auto;
     padding: 50px 20px;
 }
@@ -478,11 +352,14 @@ nav .nav_items ul li a {
     align-items: center;
     justify-content: space-between;
 }
-.footer-top .fooer-btn button{
+.footer-top img{
+    width: 140px;
+}
+.footer-top .footer-btn button{
     padding: 10px 30px;
-    border: 0;
+    border:0;
     outline: none;
-    border: 1px solid #d1d0d0;
+    border: 1px soild #d1d0d0;
     font-size: 16px;
     margin: 0 6px;
     border-radius: 8px;
@@ -491,7 +368,6 @@ nav .nav_items ul li a {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-
 }
 .footer-links .column{
     margin: 50px 12px;
@@ -507,86 +383,78 @@ nav .nav_items ul li a {
     text-decoration: none;
     color: #919090;
     font-size: 15px;
-
 }
-.footer-links div .column div{
+.footer-links .column div{
+    text-transform: uppercase;
     letter-spacing: 1px;
     font-size: 16px;
 }
 .col-links a i{
     padding: 6px;
     color: #fff;
-    background: rgb(51, 53, 51);
+    background: rgb(51,53,51);
     border-radius: 50%;
     margin-bottom: 20px;
     font-size: 14px;
 }
 .col-links li img{
-    width: 130px;
+    width: 150px;
 }
-
 .footer-bottom{
-   font-size: 14px;
-   margin-top: 20px;
-    color: #acabab;
+    font-size: 14px;
+    margin-top: 20px;
+    text-align: left;
+    color: #6b6a6a;
+}
+/*..............media query for small screen size............... */
+@media only screen and (max-width: 768px){
+    .menu-icon{
+        display: block;   
+}
+nav .app_link a, nav  .nav_items ul{
+    display: none;
+}
+.content_wrapper h1{
+    font-size: 1.5rem;
+}
+.content_wrapper img{
+    width: 250px
+}
+.collection-card .card{
+    width: 100%;
+    margin: 20px;
+}
+.popular-location .box{
+    width: 100%;
+}
+.app{
+    flex-direction: column;
+}
+.app .app-image, .app .get-app{
+    width:100%
+}
+.app .submit input .app .submit button{
+    width: 100%;
+    margin-left:0;
+    margin-bottom: 10px;
+}
+.app-store{
+    flex-direction: column;
+    width: 100%;
+}
+.app-store img {
+    width: 100px;
+}.popular-location .box{
+    width: 100%;
+    
+}
+.app .app-image, .app .get-app{
+    width: 100%;
+}
+.app .submit input, .app .submit button{
+    width: 100%;
+    margin-bottom: 10px;
+    margin-left: 0;
 }
 
-
-
-/* ...............media query for small screen size.................... */
-@media only screen and (max-width: 768px) {
-    .menu-icon {
-        display: block;
-    }
-
-    nav .app_link a,
-    nav .nav_items ul {
-        display: none;
-    }
-
-    .content_wrapper h1 {
-        font-size: 1.5rem;
-    }
-
-    .content_wrapper img {
-        width: 250px;
-    }
-
-    .collection-card .card {
-        width: 100%;
-        margin: 20px;
-    }
-
-    .popular-location .box {
-        width: 100%;
-    }
-
-    .app {
-        flex-direction: column;
-
-    }
-
-    .app .app-image .get-app {
-        width: 100%;
-
-    }
-
-    .app .submit input, .app .submit button {
-        width: 100%;
-        margin-left: 0;
-        margin-bottom: 10px;
-    }
-
-    .app-store {
-        flex-direction: column;
-        width: 100%;
-        margin-top: 20px;
-    }
-
-    .app-store img{
-        width: 100px;
-    }
- 
-
-    
 }
